--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Olá Mundo do VS Code</h1>
+    <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus, magni tempora. Repudiandae, eos sapiente mollitia quasi totam, repellendus consequatur excepturi, labore consequuntur aliquam exercitationem? Vitae distinctio id possimus aspernatur libero.</P>
 </body>
 </html>
